@@ -1,3 +1,7 @@
+11Apr01=======================================================================
+1. fixed more of the "xxx disappeared from yyy" messages
+2. altered the build no logic so that it always checksums the same files
+regardless of whatever else you might have in the directory.
 10Apr01=======================================================================
 1. altered PC21 logic somewhat to eliminate dup PC21s
 2. disconnect should remove dangling local users in the routing table.
